frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deploy
  namespace: pnt-quiz
  labels:
    app: fe-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: fe-deploy
          image: gabiomega/pnt:latest
          ports: 
            - containerPort: 8877
