backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-deploy-service
  labels:
    app: backend
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8877
