frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-deploy-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9988 
      targetPort: 8877
